--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+   
+<nav>
+
+Home | <a href="#overview">Overview</a> | <a href="#background">Background</a> | <a href="#methodology">Methodology</a> | <a href="#analysis">Analysis</a> | <a href="#findings">Findings</a>
+
+
+</nav>
 
 
 <h1>Welcome to the Project Home</h1>  
 
-<section>
+<section id="overview">
 
 <h2>Project Overview</h2>    
 
@@ -20,9 +27,9 @@ Trying to learn how the bolding starts</p>
 
 </section>
 
-<section>
+<section id="background">
 
-<h2>Getting Started</h2>
+<h2>Background</h2>
 
 <p>Long ago longer now than it seems 
 <em>in perhaps a place you've seen in your dreams</em>
@@ -33,7 +40,44 @@ Because frankly that's all that they do creating one unique holidy especially fo
 
 </section>
 
-<section>
+</section id="methodology">
 
+<h2>Methodology</h2>
+
+<p>Filler Filler Filler. Some more filler. More filler. And even more filler.</p>
+
+<section id="analysis">
+
+<h2>Analysis</h2>
+
+Filler
+</section>
+
+<section id="findings">
+
+<h2>Findings</h2>
+
+<p>Long ago longer now than it seems 
+<em>in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
+<em>in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
+<em>in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
+<em>in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
+<em>in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.</p>
 </body>
 </html>
+
