Included photo in practice project

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@ Home | <a href="#overview">Overview</a> | <a href="#background">Background</a> |
 
 <h1>Welcome to the Project Home</h1>  
 
+<link rel="stylesheet" href="css/styles.css">
+
 <section id="overview">
 
 <h2>Project Overview</h2>    
@@ -40,17 +42,65 @@ Because frankly that's all that they do creating one unique holidy especially fo
 
 </section>
 
+
+
+<img src="images/Happy Seal.JPG" alt="A happy seal" width="100%">
+
+
+
 </section id="methodology">
 
 <h2>Methodology</h2>
 
 <p>Filler Filler Filler. Some more filler. More filler. And even more filler.</p>
 
+<p>in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.</p>
+
+<p>in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems</p> 
+
+in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
+
 <section id="analysis">
 
 <h2>Analysis</h2>
 
 Filler
+in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
+in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
+in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
+in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
+in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
+in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
+in perhaps a place you've seen in your dreams</em>
+for the story you are about to be told took place in the holiday world of old.
+You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
 </section>
 
 <section id="findings">
