HTML and CSS Updates

--- a/index.html
+++ b/index.html
@@ -4,20 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+<link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
+
+<header>
    
 <nav>
 
-Home | <a href="#overview">Overview</a> | <a href="#background">Background</a> | <a href="#methodology">Methodology</a> | <a href="#analysis">Analysis</a> | <a href="#findings">Findings</a>
+<ul>
 
+    
+<li><a href="#home">Home</a></li>  <li><a href="#overview">Overview</a></li>  <li><a href="#background">Background</a></li>  <li><a href="#methodology">Methodology</a></li>  <li><a href="#analysis">Analysis</a></li>  <li><a href="#findings">Findings</a></li>
 
+</ul>  
 </nav>
 
 
-<h1>Welcome to the Project Home</h1>  
+<h1>Welcome to the Project Home</h1>
 
-<link rel="stylesheet" href="css/styles.css">
+</header>
+
+<main>
+
+
 
 <section id="overview">
 
@@ -128,6 +140,15 @@ Because frankly that's all that they do creating one unique holidy especially fo
 for the story you are about to be told took place in the holiday world of old.
 You see the holidays are a matter of great fuss for the worlds that create them for us.
 Because frankly that's all that they do creating one unique holidy especially for you.</p>
+
+</section>
+
+</main>
+
+<footer>
+<p>Contact me:<a href="mailto:T.J.Rodriguez@tcu.edu">T.J.Rodriguez@tcu.edu</a></p>    
+</footer>
+
 </body>
 </html>
 
