Fine tuning and cleaning
Finally cleaned up some messy non-working code when I was typing in a hassle from class demonstrations. Now everything currently works and is clean.

--- a/index.html
+++ b/index.html
@@ -10,20 +10,25 @@
 </head>
 <body>
 
-<header>
+<header id="home">
    
 <nav>
 
 <ul>
-
     
-<li><a href="#home">Home</a></li>  <li><a href="#overview">Overview</a></li>  <li><a href="#background">Background</a></li>  <li><a href="#methodology">Methodology</a></li>  <li><a href="#analysis">Analysis</a></li>  <li><a href="#findings">Findings</a></li>
+<li><a href="#home">Home</a></li>  
+<li><a href="#overview">Overview</a></li> 
+<li><a href="#background">Background</a></li>  
+<li><a href="#methodology">Methodology</a></li> 
+<li><a href="#analysis">Analysis</a></li>  
+<li><a href="#findings">Findings</a></li>
 
 </ul>  
 </nav>
 
 
 <h1>Welcome to the Project Home</h1>
+
 
 </header>
 
@@ -35,9 +40,7 @@
 
 <h2>Project Overview</h2>    
 
-<p>Testing, beta testing, etc etc, trying to learn on the fly. 
-<strong>H stands for heading. P stands for paragraph.</strong>
-Trying to learn how the bolding starts</p>
+<p>Testing, beta testing, etc etc, trying to learn on the fly. <strong>H stands for heading. P stands for paragraph.</strong> Trying to learn how the bolding starts</p>
 
 </section>
 
@@ -46,10 +49,7 @@ Trying to learn how the bolding starts</p>
 <h2>Background</h2>
 
 <p>Long ago longer now than it seems 
-<em>in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.
+<em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you.
 <a href="https://www.tcu.edu" target="_blank"> This link will take you to TCU's website. </a><p>
 
 </section>
@@ -60,86 +60,56 @@ Because frankly that's all that they do creating one unique holidy especially fo
 
 
 
-</section id="methodology">
+<section id="methodology">
 
 <h2>Methodology</h2>
 
 <p>Filler Filler Filler. Some more filler. More filler. And even more filler.</p>
 
-<p>in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.</p>
+<p><em>In perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old.</p>
 
-<p>in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems</p> 
+<p>You see the holidays are a matter of great fuss for the worlds that create them for us. <em> in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old.</p>
 
-in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
+<p>You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you. Long ago longer now than it seems</p> 
+
+<p><em>In perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old.</p>
+
+<p>You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you. Long ago longer now than it seems.</p>
+</section>
 
 <section id="analysis">
 
 <h2>Analysis</h2>
 
-Filler
-in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
-in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
-in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
-in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
-in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
-in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
-in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
+<p>Filler <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you.</p>
+
+<p>Long ago longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you. Long ago longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you.</p>
+
+<p>Long ago longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you Long ago longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us Because frankly that's all that they do creating one unique holidy especially for you.</p>
+
+<p>Long ago longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you Long ago longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us.
+Because frankly that's all that they do creating one unique holidy especially for you.</p>
 </section>
 
 <section id="findings">
 
 <h2>Findings</h2>
 
-<p>Long ago longer now than it seems 
-<em>in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
-<em>in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
-<em>in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
-<em>in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.Long ago longer now than it seems 
-<em>in perhaps a place you've seen in your dreams</em>
-for the story you are about to be told took place in the holiday world of old.
-You see the holidays are a matter of great fuss for the worlds that create them for us.
-Because frankly that's all that they do creating one unique holidy especially for you.</p>
+<p>Long ago, longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you. But once a calamity ever so great, occured when two holidays met by mistake.</p>
+
+<p>Long ago, longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you. But once a calamity ever so great, occured when two holidays met by mistake.</p>
+
+<p>Long ago, longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you. But once a calamity ever so great, occured when two holidays met by mistake.</p>
+
+<p>Long ago, longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you. But once a calamity ever so great, occured when two holidays met by mistake.</p>
+
+<p>Long ago, longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you. But once a calamity ever so great, occured when two holidays met by mistake.</p>
+
+<p>Long ago, longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you. But once a calamity ever so great, occured when two holidays met by mistake.</p>
+
+<p>Long ago, longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you. But once a calamity ever so great, occured when two holidays met by mistake.</p>
+
+<p>Long ago, longer now than it seems <em>in perhaps a place you've seen in your dreams</em> for the story you are about to be told took place in the holiday world of old. You see the holidays are a matter of great fuss for the worlds that create them for us. Because frankly that's all that they do creating one unique holidy especially for you. But once a calamity ever so great, occured when two holidays met by mistake.</p>
 
 </section>
 
